# indubitably-code

./: .agent-session.toml  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  Dockerfile  INPUT_HISTORY_FEATURE.md  LICENSE  README.md  agent.py  agent_runner.py  agents_md.py  architecture-summary.md  cli.py  commands.py  config.py  errors.py  input_handler.py  integration-testing.md  main.py  migration.md  overall-diff.txt  policies.py  pyproject.toml  run.py  runner_config.py  test-architecture-summary.md  tools_apply_patch.py  tools_aws_api_mcp.py  tools_aws_billing_mcp.py  tools_codebase_search.py  tools_create_file.py  tools_delete_file.py  tools_edit.py  tools_glob_file_search.py  tools_grep.py  tools_line_edit.py  tools_list.py  tools_playwright_mcp.py  tools_read.py  (+5 more)
docs/: migration-guide.md
examples/: headless-runner.toml
observability/: docker-compose.yml  otel-collector.yaml
observability/loki/: config.yml
prompt/: __init__.py  packer.py  renderers.py
scripts/: run_integration_tests.py
session/: __init__.py  compaction.py  context.py  history.py  otel.py  pins.py  settings.py  summaries.py  telemetry.py  token_meter.py  turn_diff_tracker.py
tests/: conftest.py  test_agent_runner.py  test_agent_transcript.py  test_agents_md.py  test_cli.py  test_config.py  test_errors.py  test_harness_agent.py  test_input_handler.py  test_mock_server.py  test_otel_exporter.py  test_policies.py  test_runner_config.py  test_session.py  test_session_telemetry.py  test_tool_timing.py  test_tools_apply_patch.py  test_tools_aws_api_mcp.py  test_tools_aws_billing_mcp.py  test_tools_create_file.py  test_tools_edit.py  test_tools_glob_search.py  test_tools_grep.py  test_tools_line_edit.py  test_tools_list.py  test_tools_playwright_mcp.py  test_tools_read.py  test_tools_rename_file.py  test_tools_run_cmd.py  test_tools_template_block.py  test_turn_diff_tracker.py  tool_harness.py
tools/: __init__.py  handler.py  legacy.py  mcp_client.py  mcp_integration.py  mcp_pool.py  output.py  parallel.py  payload.py  registry.py  router.py  runtime.py  schemas.py  spec.py  tool_summary.py
(+63 files in other folders)
