[project]
name = "indubitably-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.67.0",
    "mcp>=1.17.0",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pyfiglet>=1.0.2",
    "pytest>=8.3",
    "pydantic>=2.7",
    "rich>=14.2.0",
]

[project.scripts]
indubitably-agent = "cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that hit the live Anthropic API",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prompt", "session", "tools"]
py-modules = [
    "agent",
    "agent_runner",
    "agents_md",
    "cli",
    "commands",
    "config",
    "main",
    "run",
    "runner_config",
    "tools_apply_patch",
    "tools_codebase_search",
    "tools_delete_file",
    "tools_edit",
    "tools_line_edit",
    "tools_glob_file_search",
    "tools_grep",
    "tools_list",
    "tools_read",
    "tools_rename_file",
    "tools_create_file",
    "tools_template_block",
    "tools_run_terminal_cmd",
    "tools_todo_write",
    "tools_web_search",
]
